hphp/hack/test/typecheck/references/call_time_reference3.php.exp
File "call_time_reference3.php", line 4, characters 9-11:
References are only allowed as function call arguments (Typing[4299])
